[project]
name = "rag-pdf-chat"
version = "0.1.0"
description = "Local RAG chatbot over a library of PDFs (FAISS + local LLM via Ollama)"
requires-python = ">=3.10,<3.13"
dependencies = [
  "faiss-cpu>=1.7.4",
  "numpy>=1.24",
  "pypdf>=4.0.0",
  "sentence-transformers>=2.7.0",
  "torch>=2.2,<3",
  "transformers>=4.41",
  "tqdm>=4.66",
  "ollama>=0.2.0",
  "rapidfuzz>=3.6",
  "pymupdf>=1.26.4",
]

[project.scripts]
rag-cli = "rag_cli:main"

[tool.uv]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.13.0",
]
# Optional: set to true for deterministic installs
# locked = true
[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
src = ["."]
extend-select = ["E", "F", "I"]  # pycodestyle/pyflakes/imports
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
